# TestAndroid

./: .gitignore  README.md  a.sh  publish-mavencentral.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/libs/: nativelibdex.aar
app/src/androidTest/java/io/github/zauther/test/android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: nativelib.aar  test.apk
app/src/main/assets/nativelib/: AndroidManifest.xml
app/src/main/assets/nativelib的副本 2/: AndroidManifest.xml  classes.dex
app/src/main/java/io/github/zauther/test/android/: App.java  MainActivity.java
app/src/main/java/io/github/zauther/test/android/func/: WX.java
app/src/main/java/io/github/zauther/test/android/list/: FuncListAdapter.java  FuncListItem.java  FuncListViewHolder.java
app/src/main/java/io/github/zauther/test/android/page/: FlutterTestPage.java  TestActivity.java  WXEntryActivity.java
app/src/main/java/io/github/zauther/test/android/qjs/: QJSConsole.java
app/src/main/java/io/github/zauther/test/android/testdex/: DexTest.java
app/src/main/res/layout/: activity_main.xml  activity_test.xml  func_list_item.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/io/github/zauther/test/android/: ExampleUnitTest.java
flutterlib/: .metadata  README.md  pubspec.yaml
flutterlib/test/: widget_test.dart
gradle/wrapper/: gradle-wrapper.properties
hive-api/: build.gradle
hive-api/src/androidTest/java/io/github/zauther/android/hive/api/: ExampleInstrumentedTest.java
hive-api/src/main/: AndroidManifest.xml
hive-api/src/test/java/io/github/zauther/android/hive/api/: ExampleUnitTest.java
hive-hybrid/: build.gradle
hive-hybrid/src/androidTest/java/io/github/zauther/android/hive/hybrid/: ExampleInstrumentedTest.java
hive-hybrid/src/androidTest/java/io/github/zauther/hive/hybrid/: ExampleInstrumentedTest.java
hive-hybrid/src/main/: AndroidManifest.xml
hive-hybrid/src/main/java/io/github/zauther/android/hive/: HiveHybrid.java
hive-hybrid/src/main/java/io/github/zauther/android/hive/web/: IWebView.java
hive-hybrid/src/main/java/io/github/zauther/hive/: HiveHybrid.java
hive-hybrid/src/main/java/io/github/zauther/hive/hybrid/: HybridBridge.java
hive-hybrid/src/main/java/io/github/zauther/hive/hybrid/jsbridge/: HybridBridge.java  JSAPI.java
hive-hybrid/src/main/java/io/github/zauther/hive/web/: IWebView.java
hive-hybrid/src/test/java/io/github/zauther/hive/hybrid/: ExampleUnitTest.java
hive-network/src/main/: AndroidManifest.xml
hive-network/src/main/cpp/: CMakeLists.txt  HiveNetwork.cpp  HiveNetwork.h  network.cpp
hive-qjs/: build.gradle
hive-qjs/src/androidTest/java/cn/cwiki/android/hive/qjs/: ExampleInstrumentedTest.java
hive-qjs/src/main/: AndroidManifest.xml
hive-qjs/src/main/cpp/: CMakeLists.txt  cronet.cmake  native-lib.cpp  qjs.cpp  qjsmodule.cmake  quickjs.cmake  quickjsjni.cpp
hive-qjs/src/main/cpp/include/: qjslog.h
hive-qjs/src/main/cpp/jni/: QuickJS.cpp  QuickJS.h  QuickJSJNI.cpp  QuickJSJNI.h  global.h
hive-qjs/src/main/cpp/module/: NDKLog.h  ndklog.c  qjslog.cpp
hive-qjs/src/main/cpp/module/cronet_module/: cronet_qjs_export.h  cronet_qjs_module.cc  cronet_qjs_module.cpp  cronet_qjs_module.h  wrapper.h
hive-qjs/src/main/cpp/module/cronet_module/cronet/: cronet.idl_c.h  cronet_c.h
hive-qjs/src/main/cpp/module/cronet_module/cronet_impl/: sample_executor.cc  sample_executor.h
hive-qjs/src/main/java/cn/cwiki/android/hive/qjs/: NativeLib.java  QuickJS.java
hive-qjs/src/main/java/cn/cwiki/android/hive/qjs/jni/: QJSBool.java  (+5 more)
hive-qjs/src/test/java/cn/cwiki/android/hive/qjs/: ExampleUnitTest.java
hive-runtime/src/androidTest/java/cn/cwiki/android/hive/runtime/: ExampleInstrumentedTest.java
hive-runtime/src/main/: AndroidManifest.xml
hive-runtime/src/test/java/cn/cwiki/android/hive/runtime/: ExampleUnitTest.java
nativelib/: build.gradle
nativelib/src/androidTest/java/io/github/zauther/test/nativelib/: ExampleInstrumentedTest.java
nativelib/src/main/: AndroidManifest.xml
nativelib/src/main/cpp/: CMakeLists.txt  nativelib.cpp
nativelib/src/main/java/io/github/zauther/test/nativelib/: NativeLib.java
nativelib/src/test/java/io/github/zauther/test/nativelib/: ExampleUnitTest.java
web/: build.gradle  proguard-rules.pro
web/src/androidTest/java/io/github/zauther/test/web/: ExampleInstrumentedTest.java
web/src/main/: AndroidManifest.xml
web/src/main/assets/: hivejsbridge.js  t.js  test.html  test.js
web/src/main/cpp/: CMakeLists.txt  web.cpp
web/src/main/java/io/github/zauther/test/web/: NativeLib.java  WebActivity.java  WebTab.java  ZWeb.java
web/src/main/res/layout/: web_activity_web.xml
web/src/test/java/io/github/zauther/test/web/: ExampleUnitTest.java
(+76 files in other folders)
